--- a/basilisk/configure.in
+++ b/basilisk/configure.in
@@ -16,3 +16,10 @@ AC_SUBST(MC_BASILISK)
 
 dnl Optional parts of the build.
 
+dnl ========================================================
+dnl = Disable Sync
+dnl ========================================================
+MOZ_ARG_DISABLE_BOOL(sync,
+[  --disable-sync           Disable Sync],
+    MOZ_SERVICES_SYNC=,
+    MOZ_SERVICES_SYNC=1)
