--- a/basilisk/installer/Makefile.in
+++ b/basilisk/installer/Makefile.in
@@ -94,8 +94,8 @@ endif
 
 INSTALL_SDK = 1
 
-include $(topsrcdir)/toolkit/mozapps/installer/signing.mk
-include $(topsrcdir)/toolkit/mozapps/installer/packager-uxp.mk
+include $(MOZILLA_SRCDIR)/toolkit/mozapps/installer/signing.mk
+include $(MOZILLA_SRCDIR)/toolkit/mozapps/installer/packager-uxp.mk
 
 ifeq (bundle, $(MOZ_FS_LAYOUT))
 BINPATH = $(_BINPATH)
@@ -149,7 +149,7 @@ endif
 # fail to produce a langpack. See bug 1255096.
 make-langpack:
 ifeq (,$(filter FasterMake+RecursiveMake,$(BUILD_BACKENDS)))
-	$(MAKE) -C $(DEPTH)/application/basilisk/locales langpack
+	$(MAKE) -C $(DEPTH)/basilisk/locales langpack
 else
 	@echo WARNING: "Language Pack was not generated due to using the hybrid FasterMake/RecursiveMake backend." >&2
 endif
