--- a/basilisk/installer/package-manifest.in
+++ b/basilisk/installer/package-manifest.in
@@ -235,7 +235,7 @@
 @RESPATH@/components/jar.xpt
 @RESPATH@/components/jsdebugger.xpt
 @RESPATH@/components/jsdownloads.xpt
-@RESPATH@/browser/components/jsinspector.xpt
+@RESPATH@/components/jsinspector.xpt
 @RESPATH@/components/layout_base.xpt
 #ifdef NS_PRINTING
 @RESPATH@/components/layout_printing.xpt
