--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "platform"]
 	path = platform
-	url = https://github.com/MoonchildProductions/UXP.git
+url=https://repo.palemoon.org/MCP/UXP.git
