--- a/basilisk/app/Makefile.in
+++ b/basilisk/app/Makefile.in
@@ -24,8 +24,8 @@ NSDISTMODE = copy
 include $(topsrcdir)/config/config.mk
 
 ifeq ($(OS_ARCH),WINNT)
-# Rebuild firefox.exe if the manifest changes - it's included by splash.rc.
-# (this dependency should really be just for firefox.exe, not other targets)
+# Rebuild basilisk.exe if the manifest changes - it's included by splash.rc.
+# (this dependency should really be just for basilisk.exe, not other targets)
 # Note the manifest file exists in the tree, so we use the explicit filename
 # here.
 EXTRA_DEPS += basilisk.exe.manifest
