Issue #7 and #8 - Update the rest of the Moonchild stuff to say either Basilisk-Dev or Basilisk Development Team

--- a/basilisk/app/application.ini
+++ b/basilisk/app/application.ini
@@ -20,7 +20,7 @@
 
 [App]
 # Vendor=@MOZ_APP_VENDOR@
-Vendor=Moonchild Productions
+Vendor=Basilisk-Dev
 # Name=@MOZ_APP_BASENAME@
 Name=Basilisk
 RemotingName=@MOZ_APP_REMOTINGNAME@
