--- a/basilisk/installer/windows/nsis/defines.nsi.in
+++ b/basilisk/installer/windows/nsis/defines.nsi.in
@@ -51,7 +51,7 @@ VIProductVersion "1.0.0.0"
 VIAddVersionKey "ProductName"     "${BrandShortName}"
 VIAddVersionKey "CompanyName"     "${CompanyName}"
 #ifdef MOZ_OFFICIAL_BRANDING
-VIAddVersionKey "LegalTrademarks" "${BrandShortName} is a Trademark of Basilisk-Dev."
+VIAddVersionKey "LegalTrademarks" "${BrandShortName} is a Trademark of the Basilisk Development Team."
 #endif
 VIAddVersionKey "LegalCopyright"  "${CompanyName}"
 VIAddVersionKey "FileVersion"     "${AppVersion}"
