--- a/basilisk/app/macbuild/Contents/Info.plist.in
+++ b/basilisk/app/macbuild/Contents/Info.plist.in
@@ -209,6 +209,8 @@
 	<dict>
 		<key>MallocNanoZone</key>
 		<string>0</string>
+		<key>SYSTEM_VERSION_COMPAT</key>
+		<string>0</string>
 	</dict>
 	<key>LSFileQuarantineEnabled</key>
 	<true/>
@@ -216,13 +218,10 @@
 	<string>10.7.0</string>
   <key>NSSupportsAutomaticGraphicsSwitching</key>
   <true/>
+  <key>NSRequiresAquaSystemAppearance</key>
+  <true/>
   <key>NSPrincipalClass</key>
-  <string>GeckoNSApplication</string>
-	<key>SMPrivilegedExecutables</key>
-	<dict>
-		<key>org.mozilla.updater</key>
-		<string>identifier "org.mozilla.updater" and ((anchor apple generic and certificate leaf[field.1.2.840.113635.100.6.1.9]) or (anchor apple generic and certificate 1[field.1.2.840.113635.100.6.2.6] and certificate leaf[field.1.2.840.113635.100.6.1.13] and certificate leaf[subject.OU] = "43AQ936H96"))</string>
-	</dict>
+  <string>GoannaNSApplication</string>
   <key>NSDisablePersistence</key>
   <true/>
 </dict>
