--- a/.github/workflows/build-basilisk.yml
+++ b/.github/workflows/build-basilisk.yml
@@ -15,7 +15,7 @@ jobs:
           submodules: recursive
 
       - name: Install dependencies
-        run: sudo apt-get update \
+        run: sudo apt-get update
           sudo apt-get install -y build-essential libgtk2.0-dev libssl-dev \
           libdbus-glib-1-dev autoconf2.13 yasm libegl1-mesa-dev libasound2-dev \
           libxt-dev zlib1g-dev libsqlite3-dev libbz2-dev libpulse-dev zip \
