--- a/.github/workflows/build-basilisk.yml
+++ b/.github/workflows/build-basilisk.yml
@@ -15,11 +15,13 @@ jobs:
           submodules: recursive
 
       - name: Install dependencies
-        run: sudo apt-get update &&
-          sudo apt-get install -y build-essential libgtk2.0-dev libssl-dev \
-          libdbus-glib-1-dev autoconf2.13 yasm libegl1-mesa-dev libasound2-dev \
-          libxt-dev zlib1g-dev libsqlite3-dev libbz2-dev libpulse-dev zip \
-          libgconf2-dev libx11-xcb-dev python2.7 python-dbus
+        run: |
+          sudo apt-get update
+          sudo apt-get upgrade -y
+          sudo apt-get install build-essential libgtk2.0-dev libdbus-glib-1-dev \
+          yasm libegl1-mesa-dev libasound2-dev libxt-dev zlib1g-dev libssl-dev \
+          libsqlite3-dev libbz2-dev libpulse-dev libgconf2-dev libx11-xcb-dev \
+          zip python2.7 python-dbus libgtk-3-dev autoconf2.13 -y
 
       - name: Copy mozconfig
         run: cd basilisk-mirror && cp .github/workflows/build-basilisk/mozconfig-gtk3-x86_64 .mozconfig
