--- a/.github/workflows/build-basilisk.yml
+++ b/.github/workflows/build-basilisk.yml
@@ -23,11 +23,8 @@ jobs:
         with:
           submodules: recursive
 
-      - name: list files
-        run: 'ls -alh .'
-
       - name: Copy mozconfig
-        run: cd basilisk-mirror && cp .github/workflows/build-basilisk/mozconfig-gtk3-x86_64 .mozconfig
+        run: cp .github/workflows/build-basilisk/mozconfig-gtk3-x86_64 .mozconfig
 
       - name: mach configure
         run: ./mach configure
