--- a/.github/workflows/build-basilisk.yml
+++ b/.github/workflows/build-basilisk.yml
@@ -26,7 +26,7 @@ jobs:
           sudo apt-get install build-essential libgtk2.0-dev libdbus-glib-1-dev \
           yasm libegl1-mesa-dev libasound2-dev libxt-dev zlib1g-dev libssl-dev \
           libsqlite3-dev libbz2-dev libpulse-dev libgconf2-dev libx11-xcb-dev \
-          zip python2.7 python-dbus-dev libgtk-3-dev autoconf2.13 -y
+          zip python2.7 python-dbus-dev libgtk-3-dev autoconf2.13 ccache -y
 
       - uses: actions/checkout@v3
         with:
@@ -37,6 +37,14 @@ jobs:
 
       - name: mach configure
         run: ./mach configure
+
+      - name: Set up compiler cache
+        uses: actions/cache@v3
+        with:
+          path: "~/.ccache"
+          key: ${{ matrix.config.os }}-${{ matrix.config.gtk }}-${{ github.head_ref }}-${{ github.run_number }}
+          restore-keys: |
+            ${{ matrix.config.os }}-${{ matrix.config.gtk }}-${{ github.head_ref }}-
 
       - name: mach build
         run: ./mach build
