--- a/.github/workflows/build-basilisk.yml
+++ b/.github/workflows/build-basilisk.yml
@@ -14,10 +14,12 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - name: GTK3
+        - name: GTK3-x86_64
           gtk: gtk3
-        - name: GTK2
+          arch: x86_64
+        - name: GTK2-x86_64
           gtk: gtk2
+          arch: x86_64
     steps:
       - name: Install dependencies
         run: |
@@ -33,7 +35,7 @@ jobs:
           submodules: recursive
 
       - name: Copy mozconfig
-        run: cp .github/workflows/build-basilisk/mozconfig-${{ matrix.config.gtk }}-x86_64 .mozconfig
+        run: cp .github/workflows/build-basilisk/mozconfig-${{ matrix.config.gtk }}-${{ matrix.config.arch }} .mozconfig
 
       - name: mach configure
         run: ./mach configure
@@ -42,9 +44,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: "~/.ccache"
-          key: ${{ matrix.config.os }}-${{ matrix.config.gtk }}-${{ github.head_ref }}-${{ github.run_number }}
+          key: ${{ matrix.config.os }}-${{ matrix.config.gtk }}-${{ matrix.config.arch }}-${{ github.head_ref }}-${{ github.run_number }}
           restore-keys: |
-            ${{ matrix.config.os }}-${{ matrix.config.gtk }}-${{ github.head_ref }}-
+            ${{ matrix.config.os }}-${{ matrix.config.gtk }}-${{ matrix.config.arch }}-${{ github.head_ref }}-
 
       - name: mach build
         run: ./mach build
@@ -54,5 +56,5 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: basilisk-linux-x86_64-${{ matrix.config.name }}
-          path: obj-x86_64-pc-linux-gnu/dist/basilisk-*
+          name: basilisk-linux-${{ matrix.config.arch }}-${{ matrix.config.gtk }}
+          path: obj-${{ matrix.config.arch }}-pc-linux-gnu/dist/basilisk-*
