--- a/basilisk/installer/package-manifest.in
+++ b/basilisk/installer/package-manifest.in
@@ -682,13 +682,13 @@
 ; Shutdown Terminator
 @RESPATH@/components/terminator.manifest
 
-#if defined(CLANG_CXX)
-#if defined(MOZ_ASAN) || defined(MOZ_TSAN)
-@BINPATH@/llvm-symbolizer
+#ifndef XP_MACOSX
+#if defined(MOZ_ASAN) || defined(MOZ_TSAN) || defined(MOZ_LSAN) || defined(MOZ_UBSAN)
+@BINPATH@/llvm-symbolizer@BIN_SUFFIX@
 #endif
 #endif
 
-#if defined(MOZ_ASAN) && defined(CLANG_CL)
+#if defined(MOZ_ASAN) && defined(XP_WIN)
 @BINPATH@/clang_rt.asan_dynamic-*.dll
 #endif
 
