--- a/.github/workflows/build-basilisk-i686.yml
+++ b/.github/workflows/build-basilisk-i686.yml
@@ -1,4 +1,4 @@
-name: Build Basilisk x86_64
+name: Build Basilisk i686
 
 on:  
   workflow_dispatch:
@@ -9,33 +9,43 @@ on:
 jobs:
   build-basilisk:
     name: Build Basilisk ${{ matrix.config.name }}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         config:
-        - name: GTK3 x86_64
+        - name: GTK3 i686
           gtk: gtk3
-          arch: x86_64
-        - name: GTK2 x86_64
+          arch: i686
+        - name: GTK2 i686
           gtk: gtk2
-          arch: x86_64
+          arch: i686
     steps:
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get upgrade -y
-          sudo apt-get install -y build-essential libgtk2.0-dev libdbus-glib-1-dev \
+          sudo apt-get install build-essential libgtk2.0-dev libdbus-glib-1-dev \
           yasm libegl1-mesa-dev libasound2-dev libxt-dev zlib1g-dev libssl-dev \
           libsqlite3-dev libbz2-dev libpulse-dev libgconf2-dev libx11-xcb-dev \
           zip python2.7 python-dbus-dev libgtk-3-dev autoconf2.13 -y
+
+      - name: Install 32-bit Dependencies
+        if: matrix.config.arch == 'i686'
+        run: |
+          sudo dpkg --add-architecture i386
+          sudo apt-get update
+          sudo apt-get install gcc-multilib g++-multilib libxt-dev:i386 \
+          libx11-xcb-dev:i386 libxext-dev:i386 libxcb-shm0-dev:i386 \
+          libgtk2.0-dev:i386 libgtk-3-dev:i386 libasound2-dev:i386 \
+          libpulse-dev:i386 libdbus-glib-1-dev:i386
 
       - uses: actions/checkout@v3
         with:
           submodules: recursive
 
       - name: Copy mozconfig
-        run: cp .github/workflows/build-basilisk/mozconfig-${{ matrix.config.gtk }}-${{ matrix.config.arch }} .mozconfig
+        run: cp .github/workflows/build-basilisk-i686/mozconfig-${{ matrix.config.gtk }}-${{ matrix.config.arch }} .mozconfig
 
       - name: mach configure
         run: ./mach configure
