--- a/.github/workflows/build-basilisk.yml
+++ b/.github/workflows/build-basilisk.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build-basilisk:
     name: Build Basilisk ${{ matrix.config.name }}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -22,14 +22,21 @@ jobs:
           gtk: gtk2
           arch: x86_64
     steps:
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get upgrade -y
-          sudo apt-get install -y build-essential libgtk2.0-dev libdbus-glib-1-dev \
-          yasm libegl1-mesa-dev libasound2-dev libxt-dev zlib1g-dev libssl-dev \
-          libsqlite3-dev libbz2-dev libpulse-dev libgconf2-dev libx11-xcb-dev \
-          zip python2.7 python-dbus-dev libgtk-3-dev autoconf2.13 -y
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # this might remove tools that are actually needed,
+          # if set to "true" but frees about 6 GB
+          tool-cache: false
+          
+          # all of these default to true, but feel free to set to
+          # "false" if necessary for your workflow
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: false
+          swap-storage: false
 
       - uses: actions/checkout@v3
         with:
@@ -38,14 +45,8 @@ jobs:
       - name: Copy mozconfig
         run: cp .github/workflows/build-basilisk/mozconfig-${{ matrix.config.gtk }}-${{ matrix.config.arch }} .mozconfig
 
-      - name: mach configure
-        run: ./mach configure
-
-      - name: mach build
-        run: ./mach build
-
-      - name: mach package
-        run: ./mach package
+      - name: Build Basilisk
+        run: docker run -v $PWD:/share --rm -e UPDATEFIRST=$UPDATEFIRST -e UID=$(id -u) -e GID=$(id -g) -e USERNAME=$(whoami) -e GROUPNAME=$(id -gn) -t basiliskdev/slackware14-uxp:latest /share/build-scripts/linux-x86_64/build_basilisk_subscripts/run_inside_docker.sh
 
       - uses: actions/upload-artifact@v3
         with:
