Fix leftover from development of github action for windows

--- a/.github/workflows/build-basilisk-windows.yml
+++ b/.github/workflows/build-basilisk-windows.yml
@@ -8,7 +8,7 @@ on:
       - release
 
 jobs:
-  build-basilisk-win64:
+  build-basilisk-windows:
     name: Build Basilisk ${{ matrix.config.name }}
     runs-on: windows-2022
     strategy:
