Don't build hunspell shared on SunOS
Port of MoonchildProductions/Pale-Moon commit ecdd494c58

--- a/basilisk/installer/package-manifest.in
+++ b/basilisk/installer/package-manifest.in
@@ -74,7 +74,9 @@
 @BINPATH@/@DLL_PREFIX@gkmedias@DLL_SUFFIX@
 #endif
 #ifndef MOZ_SYSTEM_HUNSPELL
+#ifndef XP_SOLARIS
 @BINPATH@/@DLL_PREFIX@hunspell@DLL_SUFFIX@
+#endif
 #endif
 #ifndef MOZ_SYSTEM_NSPR
 #ifndef MOZ_FOLD_LIBS
