GitHub Actions: Do not remove dotnet as it causes issues

--- a/.github/workflows/build-basilisk.yml
+++ b/.github/workflows/build-basilisk.yml
@@ -32,7 +32,7 @@ jobs:
           # all of these default to true, but feel free to set to
           # "false" if necessary for your workflow
           android: true
-          dotnet: true
+          dotnet: false
           haskell: true
           large-packages: true
           docker-images: false
