--- a/.github/workflows/build-basilisk.yml
+++ b/.github/workflows/build-basilisk.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Free Disk Space Prep
         run: |
           sudo apt-get update
-          sudo apt-get remove -y '^ dotnet -. *'
+          sudo apt-get remove -y *dotnet*
 
       - name: Free Disk Space (Ubuntu)
         uses: jlumbroso/free-disk-space@main
