--- a/basilisk/installer/package-manifest.in
+++ b/basilisk/installer/package-manifest.in
@@ -336,7 +336,7 @@
 @RESPATH@/components/WellKnownOpportunisticUtils.js
 @RESPATH@/components/WellKnownOpportunisticUtils.manifest
 #ifndef XP_MACOSX
-; OSX uses native platform impl.  Windows, Linux, and Android uses fallback JS impl.
+; OSX uses native platform impl. Windows and Linux use fallback JS impl.
 @BINPATH@/components/nsDNSServiceDiscovery.manifest
 @BINPATH@/components/nsDNSServiceDiscovery.js
 #endif
@@ -643,7 +643,7 @@
 ; meaning their .chk files are created there directly.
 ;
 #ifndef MOZ_SYSTEM_NSS
-#if defined(XP_LINUX) && !defined(ANDROID)
+#if defined(XP_LINUX)
 @BINPATH@/@DLL_PREFIX@freeblpriv3@DLL_SUFFIX@
 #elif defined(XP_SOLARIS) && defined(SPARC64)
 @BINPATH@/@DLL_PREFIX@freebl_64fpu_3@DLL_SUFFIX@
