Rename github actions to clarify linux

--- a/.github/workflows/build-basilisk-linux-i686.yml
+++ b/.github/workflows/build-basilisk-linux-i686.yml
@@ -1,4 +1,4 @@
-name: Build Basilisk i686
+name: Build Basilisk Linux i686
 
 on:  
   workflow_dispatch:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-basilisk:
-    name: Build Basilisk ${{ matrix.config.name }}
+    name: Build Basilisk Linux ${{ matrix.config.name }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -46,7 +46,7 @@ jobs:
           submodules: recursive
 
       - name: Copy mozconfig
-        run: cp .github/workflows/build-basilisk-i686/mozconfig-${{ matrix.config.gtk }}-${{ matrix.config.arch }} .mozconfig
+        run: cp .github/workflows/build-basilisk-linux-i686/mozconfig-${{ matrix.config.gtk }}-${{ matrix.config.arch }} .mozconfig
 
       - name: mach configure
         run: ./mach configure
