--- a/.github/workflows/build-basilisk-linux-x86_64.yml
+++ b/.github/workflows/build-basilisk-linux-x86_64.yml
@@ -1,4 +1,4 @@
-name: Build Basilisk x86_64
+name: Build Basilisk Linux x86_64
 
 on:  
   workflow_dispatch:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-basilisk:
-    name: Build Basilisk ${{ matrix.config.name }}
+    name: Build Basilisk Linux ${{ matrix.config.name }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -33,7 +33,7 @@ jobs:
           submodules: recursive
 
       - name: Copy mozconfig
-        run: cp .github/workflows/build-basilisk/mozconfig-${{ matrix.config.gtk }}-${{ matrix.config.arch }} .mozconfig
+        run: cp .github/workflows/build-basilisk-linux-x86_64/mozconfig-${{ matrix.config.gtk }}-${{ matrix.config.arch }} .mozconfig
 
       - name: Build Basilisk
         run: docker run -v $PWD:/share --rm -e UPDATEFIRST=$UPDATEFIRST -e UID=$(id -u) -e GID=$(id -g) -e USERNAME=$(whoami) -e GROUPNAME=$(id -gn) -t basiliskdev/slackware14-uxp:latest /share/build-scripts/linux-x86_64/build_basilisk_subscripts/run_inside_docker.sh
