--- a/.github/workflows/build-basilisk-macos.yml
+++ b/.github/workflows/build-basilisk-macos.yml
@@ -59,5 +59,5 @@ jobs:
           
       - uses: actions/upload-artifact@v4
         with:
-          name: basilisk-linux-${{ matrix.config.arch }}
-          path: obj-${{ matrix.config.compiler-arch }}-pc-linux-gnu/dist/Serpent.app
+          name: basilisk-macos-${{ matrix.config.arch }}
+          path: obj-${{ matrix.config.compiler-arch }}-apple-darwin/dist/Serpent.app
