GitHub Actions - add more artifacts for MacOS

--- a/.github/workflows/build-basilisk-macos.yml
+++ b/.github/workflows/build-basilisk-macos.yml
@@ -60,4 +60,6 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: basilisk-macos-${{ matrix.config.arch }}
-          path: obj-${{ matrix.config.compiler-arch }}-apple-darwin/dist/Serpent.app
+          path: |
+            obj-${{ matrix.config.compiler-arch }}-apple-darwin/dist/Serpent.app
+            obj-${{ matrix.config.compiler-arch }}-apple-darwin/dist/basilisk-*
