Add NSCameraUsageDescription and NSMicrophoneUsageDescription Info.plist Keys for MacOS 10.14. Add Info.plist string entries for the Basilisk executable to customize Mojave camera and microphone permission dialogs. https://bugzilla.mozilla.org/show_bug.cgi?id=1470833

--- a/basilisk/app/macbuild/Contents/Info.plist.in
+++ b/basilisk/app/macbuild/Contents/Info.plist.in
@@ -224,5 +224,9 @@
   <string>GoannaNSApplication</string>
   <key>NSDisablePersistence</key>
   <true/>
+  <key>NSCameraUsageDescription</key>
+  <string>Only sites you allow within %MAC_APP_NAME% will be able to use the camera.</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>Only sites you allow within %MAC_APP_NAME% will be able to use the microphone.</string>
 </dict>
 </plist>
