Issue #25 - replace Serpent branding with new Snake branding.
This was done so that roytam1 can have the Serpent branding for his browser

--- a/.github/workflows/build-basilisk-macos.yml
+++ b/.github/workflows/build-basilisk-macos.yml
@@ -61,5 +61,5 @@ jobs:
         with:
           name: basilisk-macos-${{ matrix.config.arch }}
           path: |
-            obj-${{ matrix.config.compiler-arch }}-apple-darwin/dist/Serpent.app
+            obj-${{ matrix.config.compiler-arch }}-apple-darwin/dist/*.app
             obj-${{ matrix.config.compiler-arch }}-apple-darwin/dist/basilisk-*
