GitHub Actions - remove autoconf 2.13

--- a/.github/workflows/build-basilisk-macos.yml
+++ b/.github/workflows/build-basilisk-macos.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          brew install autoconf@2.13 yasm pyenv
+          brew install yasm pyenv
           
           # Setup Python 2 with pyenv
           pyenv install 2.7.18
