--- a/.github/workflows/build-basilisk-linux-i686.yml
+++ b/.github/workflows/build-basilisk-linux-i686.yml
@@ -29,7 +29,7 @@ jobs:
           sudo apt-get install build-essential libgtk2.0-dev libdbus-glib-1-dev \
           yasm libegl1-mesa-dev libasound2-dev libxt-dev zlib1g-dev libssl-dev \
           libsqlite3-dev libbz2-dev libpulse-dev libgconf2-dev libx11-xcb-dev \
-          zip python2.7 python-dbus-dev libgtk-3-dev autoconf2.13 -y
+          zip python2.7 python-dbus-dev libgtk-3-dev -y
 
       - name: Install 32-bit Dependencies
         if: matrix.config.arch == 'i686'
