GitHub Actions - test swithing arm runner to warpbuild

--- a/.github/workflows/build-basilisk-linux-aarch64.yml
+++ b/.github/workflows/build-basilisk-linux-aarch64.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build-basilisk:
     name: Build Basilisk Linux ${{ matrix.config.name }}
-    runs-on: ubuntu-latest
+    runs-on: warp-ubuntu-latest-arm64-2x
     strategy:
       fail-fast: false
       matrix:
