--- a/.github/workflows/build-basilisk-linux-x86_64.yml
+++ b/.github/workflows/build-basilisk-linux-x86_64.yml
@@ -61,8 +61,11 @@ jobs:
             ${{ runner.os }}-ccache-
         continue-on-error: true
 
+#      - name: Build Basilisk
+#        run: docker run -v $PWD:/share --rm -v $HOME/.ccache:/.ccache -e CCACHE_DIR=/.ccache -e UID=$(id -u) -e GID=$(id -g) -e USERNAME=$(whoami) -e GROUPNAME=$(id -gn) -t oraclelinux:8 /share/build-scripts/linux/build_basilisk_subscripts/run_inside_docker.sh
+
       - name: Build Basilisk
-        run: docker run -v $PWD:/share --rm -v $HOME/.ccache:/.ccache -e CCACHE_DIR=/.ccache -e UID=$(id -u) -e GID=$(id -g) -e USERNAME=$(whoami) -e GROUPNAME=$(id -gn) -t oraclelinux:8 /share/build-scripts/linux/build_basilisk_subscripts/run_inside_docker.sh
+        run: ./build-scripts/linux/build_basilisk.sh
 
       - uses: actions/upload-artifact@v4
         with:
