--- a/.github/workflows/build-basilisk-linux-i686.yml
+++ b/.github/workflows/build-basilisk-linux-i686.yml
@@ -62,7 +62,7 @@ jobs:
         continue-on-error: true
 
       - name: Build Basilisk
-        run: docker run -v $PWD:/share --rm -v $HOME/.ccache:/.ccache -e CCACHE_DIR=/.ccache -e UID=$(id -u) -e GID=$(id -g) -e USERNAME=$(whoami) -e GROUPNAME=$(id -gn) -t oraclelinux:8 /share/build-scripts/linux/build_basilisk_subscripts/run_inside_docker.sh
+        run: ./build-scripts/linux/build_basilisk.sh
 
       - uses: actions/upload-artifact@v4
         with:
