--- a/basilisk/installer/windows/nsis/defines.nsi.in
+++ b/basilisk/installer/windows/nsis/defines.nsi.in
@@ -4,15 +4,15 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # These defines should match application.ini settings
-!define AppName               "Basilisk"
+!define AppName               "@MOZ_APP_DISPLAYNAME@"
 !define AppVersion            "@APP_VERSION@"
 !define GREVersion            @MOZILLA_VERSION@
 !define AB_CD                 "@AB_CD@"
 
 !define FileMainEXE           "@MOZ_APP_NAME@.exe"
-!define WindowClass           "BasiliskMessageWindow"
-!define DDEApplication        "Basilisk"
-!define AppRegName            "Basilisk"
+!define WindowClass           "@MOZ_APP_REMOTINGNAME@MessageWindow"
+!define DDEApplication        "@MOZ_APP_DISPLAYNAME@"
+!define AppRegName            "@MOZ_APP_DISPLAYNAME@"
 
 !ifndef DEV_EDITION
 !define BrandShortName        "@MOZ_APP_DISPLAYNAME@"
