--- a/.github/workflows/build-basilisk-windows.yml
+++ b/.github/workflows/build-basilisk-windows.yml
@@ -61,6 +61,11 @@ jobs:
           git clone https://${{ secrets.RPMO_CLONE_CREDENTIALS }}@repo.palemoon.org/Basilisk-Dev/${{ secrets.OFFICIAL_BRANDING_REPO_NAME }}.git official
         shell: pwsh
 
+      - name: debug dirs
+        run: |
+          C:\mozilla-build\start-shell.bat ls /d
+          C:\mozilla-build\start-shell.bat ls /d/a
+
       - name: mach configure
         run: |
           C:\mozilla-build\start-shell.bat /d/a/${{ github.event.repository.name }}/${{ github.event.repository.name }}/.github/workflows/build-basilisk-windows/mach-passthrough-windows.sh /d/a/${{ github.event.repository.name }}/${{ github.event.repository.name }} configure
