GitHub Actions and Mozconfigs - use SDK version 26100 on 64-bit windows

--- a/.github/workflows/build-basilisk-windows.yml
+++ b/.github/workflows/build-basilisk-windows.yml
@@ -36,7 +36,7 @@ jobs:
 
       - uses: ChristopheLav/windows-sdk-install@v1
         with:
-          version-sdk: 22621
+          version-sdk: ${{ matrix.config.arch == 'x86_64' && '26100' || '22621' }}
           features: 'OptionId.DesktopCPPx64,OptionId.DesktopCPPx86'
 
       - uses: actions/checkout@v4
