Prep work for clang/libcxx/lto builds

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "platform"]
 	path = platform
 	url = https://repo.palemoon.org/MoonchildProductions/UXP.git
+[submodule "thirdparty/libcxx-static"]
+	path = thirdparty/libcxx-static
+	url = https://github.com/llvm/llvm-project.git
