--- a/.github/workflows/build-basilisk-linux-aarch64.yml
+++ b/.github/workflows/build-basilisk-linux-aarch64.yml
@@ -81,5 +81,5 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: basilisk-linux-${{ matrix.config.arch }}-${{ matrix.config.gtk }}
+          name: basilisk-linux-${{ matrix.config.arch }}-${{ matrix.config.gtk }}-${{ matrix.config.compiler }}
           path: obj-${{ matrix.config.arch }}-unknown-linux-gnu/dist/basilisk-*
